BUGFIX #4848 FileIFrameField visual problem where the preview image is hidden if the TreeDropdownField gets too long for selecting a file
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/branches/2.4@95084 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/FileIFrameField.css
+++ b/css/FileIFrameField.css
@@ -150,16 +150,20 @@ div.TreeDropdownField a.editLink {
 }
 
 .mainblock {
-	float: left; 
-	border: 1px #CCC solid; 
-	padding: 5px; 
+	float: left;
+	border: 1px solid #ccc; 
+	padding: 5px;
 	margin-right: 5px;
 	height: 140px;
 	position: relative;
 }
-	
 	.mainblock.editform {
-		width: 290px;
+		width: 250px;
+	}
+	.mainblock.attached {
+		position: absolute;
+		left: 270px;
+		width: 100px;
 	}
 
 .mainblock form fieldset {
